<resources>
    <string name="welcome">欢迎</string>
    <string name="switch_language_to_english">切换英文</string>
    <string name="switch_language_to_chinese">切换中文</string>

    <string name="app_name">Prac15</string>
    <string name="account">帐号</string>
    <string name="password">密码</string>
    <string name="submit">登录</string>

    <string name="account_registry">帐号</string>
    <string name="password_registry">密码</string>
    <string name="submit_registry">注册</string>
    <string name="default_username">Steve</string>
    <string name="default_signature">要致富，先撸树</string>

    <string name="to_registry">还没有帐号？去注册</string>
    <string name="to_login">已有帐号？去登录</string>
    <string name="logout">退出登录</string>
    <string name="remember">记住密码</string>

    <string name="hint_login_account">请输入帐号</string>
    <string name="hint_login_password">请输入密码</string>
    <string name="hint_registry_account">6到12个字母或数字</string>
    <string name="hint_registry_password">8到20个字母或数字</string>

    <string name="nav_to_home">首页</string>
    <string name="nav_to_article">文章</string>
    <string name="nav_logout">退出登录</string>
</resources>