<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:background="#3fffffff">

            <ImageView
                android:layout_width="431dp"
                android:layout_height="313dp"
                android:background="#80FFFFFF"
                android:src="@drawable/login_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.495" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/account" />

                <EditText
                    android:id="@+id/main_account"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.419" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.078">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/main_password"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/main_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.937"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.049" />

            <TextView
                android:id="@+id/to_registry"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/to_registry"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.904" />

            <Button
                android:id="@+id/main_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/violet_button"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_checkbox"
                app:layout_constraintVertical_bias="0.059" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>